--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,12 @@
 
 buildscript {
     ext.kotlin_version = '1.2.41'
-    ext.kotlin_version = '1.2.31'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-alpha12'
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha17'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +19,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+    }
+
+    ext {
+        room_version = '2.0.0-alpha1'
     }
 }
 
